--- a/Dockerfile.noetic
+++ b/Dockerfile.noetic
@@ -78,4 +78,4 @@ COPY scripts/ros_entrypoint.sh /
 RUN rm -rf /var/lib/apt/lists/*
 # A BTRFS bug may prevent us from cleaning up these directories.
 # https://btrfs.wiki.kernel.org/index.php/Problem_FAQ#I_cannot_delete_an_empty_directory
-RUN rm -rf cartographer_ros catkin_ws || true
+# RUN rm -rf cartographer_ros catkin_ws || true
